--- a/src/Baballonia/Views/AppSettingsView.axaml
+++ b/src/Baballonia/Views/AppSettingsView.axaml
@@ -355,12 +355,11 @@
           IconPath="ArrowSyncRegular"
           SettingToggled="{Binding CheckForUpdates, Mode=TwoWay}" />
       
-      <controls:SettingsToggle
-             IsEnabled="{Binding SteamvrAutoStart, Mode=OneWay}"
-               Title="Auto Start with SteamVR"
-               Description="Should the app launch with SteamVR? (Change requires a SteamVR restart.)"
+      <controls:SettingsToggle             
+               Title="{x:Static assets:Resources.Settings_SteamVR_Auto_Start_Header}"
+               Description="{x:Static assets:Resources.Settings_SteamVR_Auto_Start_Description}"
                IconPath="PowerRegular"
-               SettingToggled="{Binding SteamVRAutoStart, Mode=TwoWay}" />
+               SettingToggled="{Binding SteamvrAutoStart, Mode=TwoWay}" />
 
       <Border
           Padding="15,5,15,5"
